# faresnipe

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: add_a_route.md  bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml.disabled
config/: origins.example.toml  routes.example.toml
deploy/: faresnipe.service
scripts/: smoke.sh
scripts/dev/: seed_demo_db.py
src/faresnipe/: __init__.py  api.py  cli.py  config.py  detector.py  models.py  notify.py  runner.py  scanner.py  storage.py
src/faresnipe/dashboard/: __init__.py  server.py  state.py
src/faresnipe/dashboard/static/: app.js  index.html  style.css
src/faresnipe/providers/: __init__.py  base.py  google_flights_structured.py  mock.py  skyscanner.py
src/faresnipe/providers/experimental/: flight_finder_scraper.py  google_flights_scrapling.py
tests/: test_api.py  test_cli.py  test_config.py  test_dashboard.py  test_detector.py  test_google_flights_structured_provider.py  test_notify.py  test_runner.py  test_scanner.py  test_skyscanner_provider.py  test_storage.py
tests/experimental/: test_flight_finder_scraper_provider.py  test_google_flights_scrapling_provider.py  test_origins_compare.py
