[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "faresnipe"
version = "0.2.0"
description = "Open-source mistake fare hunter. Snipe cheap flights before airlines fix them."
readme = "README.md"
license = "MIT"
authors = [{ name = "faresnipe contributors" }]
requires-python = ">=3.11"
keywords = ["flights", "fares", "scanner", "mistake-fare", "travel", "self-hosted"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Utilities",
]
dependencies = [
    "fastapi>=0.110",
    "fast-flights>=3.0.2",
    "scrapling[fetchers]>=0.4.10",
    "typing_extensions>=4.6",
    "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = [
    "build>=1.0",
    "twine>=5.0",
    "ruff>=0.6",
    "PyYAML>=6.0",
    "httpx>=0.28",
]
scraping = ["playwright>=1.40"]

[project.scripts]
faresnipe = "faresnipe.cli:main"

[project.urls]
Homepage = "https://github.com/010zx00x1/faresnipe"
Repository = "https://github.com/010zx00x1/faresnipe"
Issues = "https://github.com/010zx00x1/faresnipe/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
faresnipe = ["dashboard/static/*"]

[tool.setuptools.data-files]
"." = ["README.md", "LICENSE"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E401", "E501", "E702", "F401", "F541", "F811", "I001"]
